--- a/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/mysql-deployment.yml
+++ b/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/mysql-deployment.yml
@@ -21,7 +21,11 @@ spec:
           image: mysql:5.6
           env:
             - name: MYSQL_ROOT_PASSWORD
-              value: root_Pwd
+              #value: root_Pwd
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-dbpwd-secret
+                  key: mysql-db-pwd
           ports:
             - containerPort: 3306
               name: mysql
