--- a/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/user-mgmt-deployment.yml
+++ b/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/user-mgmt-deployment.yml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: user-mgmt-microservice-backend
     spec:
+      #initContainers:
+      #  - name: init-db
+      #    image: busybox:1.31
+      #    command: [ 'sh', 'c', 'echo -e "Checking for the availability of MySQL Server deployment"; while ! nc -z mysql 3306;do sleep 1; printf "-"; done; echo -e" >> MySQL DB Ready";' ]
       containers:
         - name: user-mgmt-microservice-backend
           image: stacksimplify/kube-usermanagement-microservice:1.0.0
@@ -29,4 +33,22 @@ spec:
             - name: DB_USERNAME
               value: "root"
             - name: DB_PASSWORD
-              value: "root_Pwd"
+              #value: "root_Pwd"
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-dbpwd-secret
+                  key: mysql-db-pwd
+          livenessProbe:
+            exec:
+              command:
+                - /bin/sh
+                - -c
+                - nc -z localhost 8095
+            initialDelaySeconds: 60
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              port: 8095
+              path: /usermgmt/health-status
+            initialDelaySeconds: 60
+            periodSeconds: 10
