--- a/b01-k8sinaction2nd/pom.xml
+++ b/b01-k8sinaction2nd/pom.xml
@@ -50,6 +50,11 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- netty -->
+    <dependency>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-netty-http</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-jsonpath</artifactId>
