--- a/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/mysql-deployment.yml
+++ b/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/mysql-deployment.yml
@@ -4,6 +4,7 @@ kind: Deployment
 metadata:
   # Production non-common practice
   name: mysql
+  namespace: k8s-inaction
 spec:
   replicas: 1
   strategy:
