--- a/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/mysql-dbpwd-secret.yml
+++ b/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/mysql-dbpwd-secret.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-dbpwd-secret
+  namespace: k8s-inaction
 type: Opaque
 data:
   mysql-db-pwd: d2VsY29tZTE=
