--- a/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/persistent-volume-claim.yml
+++ b/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/persistent-volume-claim.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ebs-csi-mysql-pvc
+  namespace: k8s-inaction
 spec:
   accessModes:
     - ReadWriteOnce
