--- a/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/storage-class.yml
+++ b/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/storage-class.yml
@@ -2,6 +2,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: ebs-csi-sc
+  namespace: k8s-inaction
 provisioner: ebs.csi.aws.com
 # will delay the volume binding and provisioning of PV until an existing Pod using A PVC request it
 volumeBindingMode: WaitForFirstConsumer
