--- a/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/user-mgmt-configmap.yml
+++ b/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/user-mgmt-configmap.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: user-mgmt-dbscript-cm
+  namespace: k8s-inaction
 data:
   mysql_usermgmt.sql: |-
     DROP DATABASE IF EXISTS  usermgmtdb;
