--- a/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/user-mgmt-deployment.yml
+++ b/u01-eksmasterclass/k8s-manifest/apps/user-mgmt/user-mgmt-deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: user-mgmt-microservice-dp
+  namespace: k8s-inaction
   labels:
     app: user-mgmt-microservice-backend
 spec:
@@ -52,3 +53,8 @@ spec:
               path: /usermgmt/health-status
             initialDelaySeconds: 60
             periodSeconds: 10
+          resources:
+            requests:
+              cpu: "500m" # 1000m is equal to 1 vCPU core
+              memory: "128Mi"
+
