Ingress Path done...

--- a/b01-k8sinaction2nd/sayhello-app-v1/src/main/resources/application.properties
+++ b/b01-k8sinaction2nd/sayhello-app-v1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #
 #quarkus.http.host-enabled=false
 # EXPOSE 8080 Dockerfile.native
-server.port=8080
-%dev.server.port=12080
+server.port=12080
+#%dev.server.port=12080
