--- a/b01-k8sinaction2nd/pom.xml
+++ b/b01-k8sinaction2nd/pom.xml
@@ -8,12 +8,12 @@
   <parent>
     <artifactId>kubernetes-hells-journey</artifactId>
     <groupId>com.kubernetes.hells.journey</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
   </parent>
 
   <groupId>com.kubernetes.hells.journey.b01.k8sincation2nd</groupId>
   <artifactId>b01-k8sinaction2nd</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
   <packaging>pom</packaging>
 
   <name>Kubernetes Full Core Coverage :: Kubernetes is Action 2nd</name>
