--- a/b01-k8sinaction2nd/sayhello-app-v1/pom.xml
+++ b/b01-k8sinaction2nd/sayhello-app-v1/pom.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <artifactId>b01-k8sinaction2nd</artifactId>
     <groupId>com.kubernetes.hells.journey.b01.k8sincation2nd</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
   </parent>
 
   <groupId>com.kubernetes.hells.journey.b01.k8sincation2nd.sayhello</groupId>
   <artifactId>sayhello-app-v1</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
 
   <name>Kubernetes Full Core Coverage :: Kubernetes is Action 2nd :: Say Hello MicroService</name>
 
