--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.kubernetes.hells.journey</groupId>
   <artifactId>kubernetes-hells-journey</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
   <packaging>pom</packaging>
 
   <name>Kubernetes Full Core Coverage</name>
