--- a/u01-eksmasterclass/pom.xml
+++ b/u01-eksmasterclass/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <artifactId>kubernetes-hells-journey</artifactId>
     <groupId>com.kubernetes.hells.journey</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
   </parent>
 
   <groupId>com.kubernetes.hells.journey.u01.eksmasterclass</groupId>
   <artifactId>u01-eksmasterclass</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
   <packaging>pom</packaging>
 
   <name>Kubernetes Full Core Coverage :: AWS EKS Kubernetes :: Masterclass</name>
