--- a/b01-k8sinaction2nd/k8s-manifest/jobs/myapp-batch-cron.yaml
+++ b/b01-k8sinaction2nd/k8s-manifest/jobs/myapp-batch-cron.yaml
@@ -1,15 +1,15 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: arsenal-batch-cron
+  name: myapp-batch-cron
 spec:
   jobTemplate:
     spec:
       template:
         spec:
           containers:
-            - name: arsenal-batch-cron
-              image: douglasdb/arsenal-batch:1.0
+            - name: myapp-batch-cron
+              image: douglasdb/myapp-batch:1.0
           restartPolicy: OnFailure
   # Every each 1 minute
   schedule: "*/1 * * * *"
