Section06 Pod Pre/Stop LifeCycle begin

--- a/b01-k8sinaction2nd/pom.xml
+++ b/b01-k8sinaction2nd/pom.xml
@@ -20,10 +20,10 @@
 
   <properties>
     <skipITs>true</skipITs>
-    <maven.compiler.release>17</maven.compiler.release>
-    <surefire-plugin.version>3.0.0</surefire-plugin.version>
-    <compiler-plugin.version>3.11.0</compiler-plugin.version>
-    <quarkus.platform.version>3.2.0.Final</quarkus.platform.version>
+    <maven.compiler.release>21</maven.compiler.release>
+    <surefire-plugin.version>3.2.5</surefire-plugin.version>
+    <compiler-plugin.version>3.13.0</compiler-plugin.version>
+    <quarkus.platform.version>3.8.3</quarkus.platform.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
