--- a/b01-k8sinaction2nd/sayhello-app-v1/src/main/resources/application.properties
+++ b/b01-k8sinaction2nd/sayhello-app-v1/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 #
 #quarkus.http.host-enabled=false
 # EXPOSE 8080 Dockerfile.native
-server.port=12080
-#%dev.server.port=12080
+server.port=80
+%dev.server.port=12080
+
+camel.main.bean-introspection-logging-level=INFO
+camel.main.bean-introspection-extended-statistics=true
+#
+camel.health.routes-enabled = true
+camel.health.registry-enabled = true
+camel.routeController.enabled = true
+#
+camel.routeController.back-off-max-attempts = 3
