--- a/b01-k8sinaction2nd/mongodb-app-v1/pom.xml
+++ b/b01-k8sinaction2nd/mongodb-app-v1/pom.xml
@@ -10,16 +10,17 @@
     <version>1.0</version>
   </parent>
 
-  <groupId>com.kubernetes.hells.journey.b01.k8sincation2nd.sayhello</groupId>
-  <artifactId>sayhello-app-v1</artifactId>
+  <groupId>com.kubernetes.hells.journey.b01.k8sincation2nd.mongodb</groupId>
+  <artifactId>mongodb-app-v1</artifactId>
   <version>1.0</version>
 
-  <name>Kubernetes Full Core Coverage :: Kubernetes is Action 2nd :: Say Hello MicroService</name>
+  <name>Kubernetes Full Core Coverage :: Kubernetes is Action 2nd :: MongoDb Volumes</name>
+
 
   <dependencies>
     <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
-      <artifactId>camel-quarkus-microprofile-health</artifactId>
+      <artifactId>camel-quarkus-mongodb</artifactId>
     </dependency>
   </dependencies>
 
