--- a/b01-k8sinaction2nd/pom.xml
+++ b/b01-k8sinaction2nd/pom.xml
@@ -4,32 +4,27 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <artifactId>kubernetes-hells-journey</artifactId>
     <groupId>com.kubernetes.hells.journey</groupId>
-    <version>0.1.0</version>
+    <version>1.0</version>
   </parent>
-
   <groupId>com.kubernetes.hells.journey.b01.k8sincation2nd</groupId>
   <artifactId>b01-k8sinaction2nd</artifactId>
-  <version>0.1.0</version>
+  <version>1.0</version>
   <packaging>pom</packaging>
-
   <name>Kubernetes Full Core Coverage :: Kubernetes is Action 2nd</name>
-
   <properties>
     <skipITs>true</skipITs>
     <maven.compiler.release>21</maven.compiler.release>
     <surefire-plugin.version>3.2.5</surefire-plugin.version>
     <compiler-plugin.version>3.13.0</compiler-plugin.version>
-    <quarkus.platform.version>3.8.3</quarkus.platform.version>
+    <quarkus.platform.version>3.8.4</quarkus.platform.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
   </properties>
-
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -48,7 +43,6 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
   <dependencies>
     <!-- netty -->
     <dependency>
@@ -161,6 +155,9 @@
     </profile>
   </profiles>
   <modules>
+    <module>mongodb-app-v1</module>
     <module>sayhello-app-v1</module>
+    <module>appv1-emptydir-read</module>
+    <module>appv1-emptydir-write</module>
   </modules>
 </project>
