--- a/b01-k8sinaction2nd/sayhello-app-v1/src/main/resources/application.properties
+++ b/b01-k8sinaction2nd/sayhello-app-v1/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 #
-#quarkus.http.host-enabled=false
+quarkus.http.host-enabled=false
 # EXPOSE 8080 Dockerfile.native
-server.port=80
-%dev.server.port=12080
-
+#docker hub tag version 1.0
+#server.port=80
+#docker hub tag version 2.0
+server.port=8080
+#docker hub tag version 1.0
+#%dev.server.port=12080
+%dev.server.port=9081
+#
 camel.main.bean-introspection-logging-level=INFO
 camel.main.bean-introspection-extended-statistics=true
 #
-camel.health.routes-enabled = true
-camel.health.registry-enabled = true
-camel.routeController.enabled = true
+camel.health.routes-enabled=true
+camel.health.registry-enabled=true
+camel.routeController.enabled=true
 #
-camel.routeController.back-off-max-attempts = 3
+camel.routeController.back-off-max-attempts=3
